upstream/codex-rust-v0.153.4/codex-rs/tui/src/snapshots/codex_tui__magic_circle__tests__magic_charging.snap
---
source: tui/src/magic_circle_tests.rs
expression: "snapshot(&circle, now + Duration::from_secs(16))"
---



                                ⢀⡠⠔⠒⠉⢉⣉⣉⣉C⡉r⠒e⢄⡀
                              ⡠⠚⢁⣠⠔⢒⣉⣁⣀⣀⣤⣤⣈⠉⠑⠢⢄at⢤⡀
                            ⡴⠋⢀⠔⠉⣠⡴⠿⢛⣋⣩⠭⠭⢍⣉⡙⠷⣶⢦⠈⠢⡀e⢄
                          ⢀⠎⢀⠔⢁⣶⡿⣋⠴⠊⢉⣀⠤⠤⠤⠤⣄⡈⠑⠢⡙⠳⣤⡈⢢ ⠳a
                         ⢀⠎⢀⠎⢀⡾⢋⠔⠁⡠⠚⢉⡠⠤⠤⠤⠤⣄⡈⠓⢄⠈⢣⡙⣿⡇⠳⡀ ⡀
                         ⡜ ⡎⢰⣿⢃⠎⢀⠞⢀⡔⠋      ⠉⢦⡀⢳⡀⢱⡈⣷ ⢣ s
                         ⡇⢰⠁⢸⡏⡸ ⡞ ⡞          ⢱ ⢣ ⣇⢸⣷⠈⡆⢸m
                         ⡇⢸ ⣸⡇⡇ ⡇ ⡇          ⢸ ⢸ ⢸⢸⡏ ⡇⢸a
                         ⡇⠸⡀⢿⡇⢹ ⢣ ⢇          ⡼ ⡼ ⡎⣸⡇⢀⠇⢸l
                         ⢣ ⢣ ⢿⡈⢇⠈⢧⠈⠳⣀      ⣠⠜⠁⡴⠁⡰⢡⣿⠇⡸ l
                         ⠈⢆⠈⢦⢸⣿⣌⢣⡀⠑⢤⡈⠙⠒⠒⠒⠒⠊⣁⡤⠊⢀⠔⣡⡾⠁⡰⠁⡰
                          ⠈⢦⠈⠣⡈⠛⢦⣌⠢⢄⡈⠙⠒⠒⠒⠒⠉⣁⡠⠖⣩⣾⠿⢁⠔⠁⡰c
                            ⠑⣄⠈⠢⡀⠳⠿⢶⣌⣉⣑⣒⣒⣋⣩⣥⣶⠞⠋⣀⠔⠁⣠⠞o
                             ⠈⠓⢄⡈⠑⠢⢄⣀⡉⠛⠛⠉⠉⢉⣉⠥⠔⠋⢁⡤sn
                                n⠑o⠤⣀⣈⣉⣉⣉⣉⣁⣀⠤e⠊t
                                    i t a l l
