upstream/codex-rust-v0.153.4/codex-rs/tui/src/snapshots/codex_tui__magic_circle__tests__magic_long_prompt.snap
---
source: tui/src/magic_circle_tests.rs
expression: rendered
---


                                  ⢀⣀⡠⠤⠤⠤⠤⠤⢄⣀⡀
                              ⢀⡤⠔⠊⠁✦ ✦ ✦ ✦ ✦⠈⠑⠢⢤⡀
                            ⡠⠞⠉cle ⣀⣀⠤⠤⠤⠤⠤⣀⣀  帮 ⠉⠳⢄
                          ⢠⠞ cir⡠⠖⠋⠁       ⠈⠙⠲我 把  ⠳⡄
                         ⢰⠋e  ⡠⠊    ⣀⡠⠤⠤⠤⢄⣀    ⠑⢄  t⠙⡆
                        ⢠⠃an⢀⡞   ⢠⠔⢻⠑⠦⣀ ⢀⡠⠔⢻⠢⡄   ⢳⡀e ⠘⡄
                        ⡇ c ⡞   ⡰⠃ ⢸ ⣀⠤⠓⠣⣀ ⢸ ⠘⢆   ⢳ r ⢸
                       ⢸ r ⢰⠁  ⢠⠃⣀⠤⢺⠉     ⠙⡾⣄⡀⠘⡄  ⠈⡆m  ⡇
                       ⢸ A ⢸   ⢸⠯⣀ ⢸   ⠒   ⡇ ⠉⣲⡇   ⡇ i ⡇
                       ⢸   ⠸⡀  ⠘⡄⠈⠙⡾⣄     ⣀⡧⠒⠉⢠⠃  ⢀⠇ n ⡇
                        ⡇开  ⢧   ⠱⡄ ⡇ ⠉⢢⢤⠒⠉ ⡇ ⢠⠎   ⡼ a ⢸
                        ⠘⡄展 ⠈⢧   ⠘⠢⣧⠔⠊⠁ ⠉⠲⢄⣧⠔⠃   ⡼⠁ l⢠⠃
                         ⠸⣄渐  ⠑⢄    ⠉⠑⠒⠒⠒⠊⠉    ⡠⠊ 渲 ⣠⠇
                          ⠘⢦逐 时 ⠑⠦⣄⡀       ⢀⣠⠴改 染  ⡴⠃
                            ⠑⢦⣀型 模 ⠉⠉⠒⠒⠒⠒⠒⠉⠉魔 成 ⣀⡴⠊
                              ⠈⠓⠢⢄待 等 ， 阵 法 ⢀⡠⠔⠚⠁
                                  ⠈⠉⠑⠒⠒⠒⠒⠒⠊⠉⠁
