upstream/codex-rust-v0.153.4/codex-rs/tui/src/snapshots/codex_tui__magic_circle__tests__magic_reply_orbits.snap
---
source: tui/src/magic_circle_tests.rs
expression: "snapshot(&circle, now + Duration::from_secs(16))"
---



                                ⢀⡠⠔⠒⠉⢉⣉⣉⣉C⡉r⠒e⢄⡀
                              ⡠⠚⢁⣠⠔⢒⣉⣁⣀⣀⣤⣤⣈⠉⠑⠢⢄at⢤⡀
                            ⡴⠋⢀⠔⠉⣠⡴⠿⢛⣋⣩⠭⠭⢍⣉⡙⠷⣶⢦⠈⠢⡀e⢄
                          ⢀⠎⢀⠔⢁⣶⡿⣋⠴d⢉i⠤n⠤g⣄ ⠑t⡙⠳⣤⡈⢢ ⠳a
                         ⢀⠎⢀⠎⢀⡾⢋ea⡠⠚⢉⡠⠤⠤⠤⠤⣄⡈⠓⢄h⢣⡙⣿⡇⠳⡀ ⡀
                         ⡜ ⡎⢰⣿⢃R⢀⠞⢀⡔⠋      ⠉⢦⡀⢳⡀e ⣷ ⢣ s
                         ⡇⢰⠁⢸⡏⡸ ⡞ ⡞          ⢱ ⢣ f⢸⣷⠈⡆⢸m
                         ⡇⢸ ⣸⡇⡇ ⡇ ⡇          ⢸ ⢸ i⢸⡏ ⡇⢸a
                         ⡇⠸⡀⢿⡇⢹ ⢣ ⢇          ⡼ ⡼ l⣸⡇⢀⠇⢸l
                         ⢣ ⢣ ⢿⡈⢇⠈⢧⠈⠳⣀      ⣠⠜⠁⡴⠁⡰e⣿⠇⡸ l
                         ⠈⢆⠈⢦⢸⣿⣌⢣⡀⠑⢤⡈⠙⠒⠒⠒⠒⠊⣁⡤⠊⢀⠔s⡾⠁⡰⠁⡰
                          ⠈⢦⠈⠣⡈⠛⢦⣌⠢⢄⡈⠙⠒⠒⠒⠒⠉⣁⡠⠖⣩⣾⠿⢁⠔⠁⡰c
                            ⠑⣄⠈⠢⡀⠳⠿⢶⣌⣉⣑⣒⣒⣋⣩⣥⣶⠞⠋⣀⠔⠁⣠⠞o
                             ⠈⠓⢄⡈⠑⠢⢄⣀⡉⠛⠛⠉⠉⢉⣉⠥⠔⠋⢁⡤sn
                                n⠑o⠤⣀⣈⣉⣉⣉⣉⣁⣀⠤e⠊t
                                    i t a l l
