upstream/codex-rust-v0.153.4/codex-rs/tui/src/snapshots/codex_tui__magic_circle__tests__magic_submitted.snap
---
source: tui/src/magic_circle_tests.rs
expression: "snapshot(&circle, now)"
---







                                   ⣠⠔c⠉o⠉n⠙s⣄
                                 ⢀l ⢀⡿⠲⢶⡶⠖⢿⡀t⠳e
                                 l ⢠⣋⡷⠚⠁⠈⠓⢾⣙⡄ ⢹
                                 a⠴⣿⡁⡇    ⢸⢈⣿⠦⢸C
                                 m ⠘⣍⡷⢤⡀⢀⡤⢾⣩⠃ r
                                 ⠘s⡀⠈⣷⠴⠾⠷⠦⣾⠁⢀⡴e
                                    ⠢⣄⣀⣀⣀⣀⣠⠴a
                                     a  ⠁e t
